# mlops-zoomcamp

./: .gitignore  README.md  pyproject.toml
week_1/: duration_prediction.ipynb  homework.ipynb
week_2/: duration_prediction.ipynb  hpo.py  hw.md  model.registry.ipynb  register_model.py  train.py
